<!-- authors: Marek Gergel <xgerge01@vutbr.cz>, Marek Havel <xhavel46@vutbr.cz> -->
<resources>
    <string name="app_name">Canteen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_user_name">John Doe</string>
    <string name="nav_header_user_email">johndoe@vut.cz</string>
    <string name="nav_header_user_type">student</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_order_food">Order food</string>
    <string name="menu_recharge_credit">Recharge credit</string>
    <string name="menu_order_history">Order history</string>
    <string name="menu_settings">Settings</string>
    <string name="orders">Orders</string>

    <!-- Preferences -->
    <string name="general">General</string>
    <string name="color_scheme">Color scheme</string>
    <string name="notifications">Notifications</string>
    <string name="allowed_notifications">Allowed notifications\n</string>
    <string name="language">Language</string>
    <string name="credit">credit</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_out">LOG OUT</string>
    <string name="add_credits">Add Credits</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="_100">+ 100</string>
    <string name="_200">+ 200</string>
    <string name="_500">+ 500</string>
    <string name="clear">Clear</string>
    <string name="fragment_purchase_food_name">Purchase food</string>
    <string name="loading">Loading</string>
    <string name="allergies_colon">Allergies:</string>
    <string name="order_command">Order!</string>
    <string name="allergies">Allergies</string>
    <string name="menu_food_detail">Food detail</string>
</resources>