<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/notifications">

        <SwitchPreferenceCompat
            app:key="notifications"
            app:title="@string/notifications" />

        <MultiSelectListPreference
            app:key="notifications_allowed"
            app:dependency="notifications"
            app:title="@string/allowed_notifications"
            app:entries="@array/notification_entries"
            app:entryValues="@array/notification_values"
            app:defaultValue="@array/notification_values"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/general">

        <ListPreference
            app:key="color_scheme"
            app:title="@string/color_scheme"
            app:entries="@array/color_scheme_entries"
            app:entryValues="@array/color_scheme_values"
            app:defaultValue="system_selected"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:key="language"
            app:title="@string/language"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:defaultValue="english"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>