<?xml version="1.0" encoding="utf-8"?>
<!-- author: Marek Gergel <xgerge01@vutbr.cz> -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/nav_canteen"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_order_food"
            android:icon="@drawable/order_food"
            android:title="@string/menu_order_food" />
        <item
            android:id="@+id/nav_recharge_credit"
            android:icon="@drawable/recharge_credit"
            android:title="@string/menu_recharge_credit" />
        <item
            android:id="@+id/nav_order_history"
            android:icon="@drawable/order_history"
            android:title="@string/menu_order_history" />
    </group>

    <group
        android:id="@+id/nav_others"
        android:checkableBehavior="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/menu_settings" />
    </group>
</menu>