<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_order_food">

    <fragment
        android:id="@+id/nav_order_food"
        android:name="eu.havy.canteen.ui.order_food.OrderFoodFragment"
        android:label="@string/menu_order_food"
        tools:layout="@layout/fragment_order_food" >
        <action
            android:id="@+id/action_nav_order_food_to_purchaseFoodFragment"
            app:destination="@id/nav_purchase_food"
            app:popUpTo="@id/nav_order_food"
            app:popUpToInclusive="false" />
    </fragment>

    <fragment
        android:id="@+id/nav_recharge_credit"
        android:name="eu.havy.canteen.ui.recharge_credit.RechargeCreditFragment"
        android:label="@string/menu_recharge_credit"
        tools:layout="@layout/fragment_recharge_credit" />

    <fragment
        android:id="@+id/nav_order_history"
        android:name="eu.havy.canteen.ui.order_history.OrderHistoryFragment"
        android:label="@string/menu_order_history"
        tools:layout="@layout/fragment_order_history" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="eu.havy.canteen.ui.settings.SettingsFragment"
        android:label="@string/menu_settings" />
    <fragment
        android:id="@+id/nav_purchase_food"
        android:name="eu.havy.canteen.ui.purchase_food.PurchaseFoodFragment"
        android:label="@string/fragment_purchase_food_name"
        tools:layout="@layout/fragment_purchase_food">
        <argument
            android:name="dishId"
            android:defaultValue="-1"
            app:argType="integer" />
    </fragment>
</navigation>