<?xml version="1.0" encoding="utf-8"?>
<!-- author: Marek Gergel <xgerge01@vutbr.cz> -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:paddingBottom="120dp"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="100pt"
        android:layout_height="100pt"
        android:layout_gravity="center"
        android:src="@drawable/canteen_foreground" />

    <TextView
        android:id="@+id/login_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="?colorPrimary"
        android:textSize="14sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="" />

    <AutoCompleteTextView
        android:id="@+id/login_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/password" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:indeterminate="true"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="?colorPrimary"
            android:visibility="gone"
            style="?android:attr/progressBarStyle"/>

    </LinearLayout>

</LinearLayout>